packages/compiler/ssr-harness/snapshots/ssr__ssr_inner_child.snap
---
source: ssr-harness/ssr.rs
assertion_line: 288
expression: rope
---
[`<div>`, $__ssrChild('user-card', {name: (this.props.name), role: (this.props.role)}), `</div>`]
