packages/compiler/ssr-harness/snapshots/ssr__ssr_inner_propless_child.snap
---
source: ssr-harness/ssr.rs
assertion_line: 296
expression: fmt_array(&inner)
---
[$__ssrChild('user-card', {})]
