packages/compiler/ssr-harness/snapshots/ssr__ssr_method_no_shadow.snap
---
source: ssr-harness/ssr.rs
assertion_line: 328
expression: method
---
$$__ssr(): unknown[] {
return [`<${this.$$__tag ?? 'my-tag'}><b>x</b></${this.$$__tag ?? 'my-tag'}>`];
}
