packages/compiler/ssr-harness/snapshots/ssr__ssr_method_prelude.snap
---
source: ssr-harness/ssr.rs
assertion_line: 341
expression: method
---
$$__ssr(): unknown[] {
const { x } = this;
return [`<${this.$$__tag ?? 'my-tag'}><b>x</b></${this.$$__tag ?? 'my-tag'}>`];
}
