packages/compiler/ssr-harness/snapshots/ssr__ssr_method_shadow_no_css.snap
---
source: ssr-harness/ssr.rs
assertion_line: 315
expression: method
---
$$__ssr(): unknown[] {
return [`<${this.$$__tag ?? 'my-tag'}><template shadowrootmode="open" shadowrootserializable=""><b>x</b></template></${this.$$__tag ?? 'my-tag'}>`];
}
